@@ -1,3 +1,7 @@
+Sun Apr 24 20:25:54 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c src/odbc/unittests/prepare_results.c:
+	- fix problem preparing before binding parameters
+
 Fri Apr 22 16:14:09 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/.cvsignore src/tds/Makefile.am src/tds/data.c:
 	- avoid header name clash
@@ -3242,4 +3246,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3205.2.13 2011-04-22 14:14:16 freddy77 Exp $
+$Id: ChangeLog,v 1.3205.2.14 2011-04-24 18:26:02 freddy77 Exp $
